test/io/literals/mismatch-read-write.template.good
mismatch-read-write.chpl:18: In function 'main':
mismatch-read-write.chpl:LINENO: error: METHOD on READWRITE-only channel
