test/io/literals/mismatch-read-write.compopts
-suseStrings=true -suseLiteral=true -suseAction=action.read
-suseStrings=true -suseLiteral=true -suseAction=action.match
-suseStrings=true -suseLiteral=true -suseAction=action.write

-suseStrings=false -suseLiteral=true -suseAction=action.read
-suseStrings=false -suseLiteral=true -suseAction=action.match
-suseStrings=false -suseLiteral=true -suseAction=action.write

-suseStrings=true -suseLiteral=false -suseAction=action.read
-suseStrings=true -suseLiteral=false -suseAction=action.match
-suseStrings=true -suseLiteral=false -suseAction=action.write
